# BetterString

./: .gitignore  CMakeLists.txt  README.md  generate_vs2022.bat
BetterString/: CMakeLists.txt
BetterString/examples/: StringExample.cpp
BetterString/include/: BetterString.h  StringUtils.h
BetterString/tests/: StringTests.cpp
BetterStringCore/: CMakeLists.txt
BetterStringCore/examples/: OptimizedStringExample.cpp
BetterStringCore/include/: BetterString.h  BetterStringCore.h  StringUtils.h
docs/: README_en.md  README_zh.md  advanced_usage.md  advanced_usage_en.md  advanced_usage_zh.md  api_reference.md  api_reference_en.md  api_reference_zh.md  basic_usage.md  basic_usage_en.md  basic_usage_zh.md  single_header_usage.md  single_header_usage_en.md  single_header_usage_zh.md
regular/: CMakeLists.txt
regular/c/include/: better_string.h
regular/c/src/: better_string.c
regular/cpp/include/: better_string.hpp
regular/cpp/src/: better_string.cpp
regular/examples/: CMakeLists.txt
regular/examples/c/: advanced_example.c  basic_example.c
regular/examples/cpp/: advanced_example.cpp  basic_example.cpp
single_header/: CMakeLists.txt  CMakeLists_debug.txt
single_header/examples/: CMakeLists.txt
single_header/examples/c/: advanced_example.c  single_header_example.c
single_header/examples/cpp/: advanced_example.cpp  single_header_example.cpp
single_header/include/: better_string_single.h  better_string_single.hpp
